WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
118601
Incorrect calculated width for mspace.
https://bugs.webkit.org/show_bug.cgi?id=118601
Summary
Incorrect calculated width for mspace.
Frédéric Wang (:fredw)
Reported
2013-07-12 06:35:37 PDT
Created
attachment 206536
[details]
testcase See the testcase. I guess RenderMathMLSpace::computePreferredLogicalWidths() should just set the specified width and should not call RenderMathMLBlock::computePreferredLogicalWidths()
Attachments
testcase
(579 bytes, text/html)
2013-07-12 06:35 PDT
,
Frédéric Wang (:fredw)
no flags
Details
Patch
(71.62 KB, patch)
2013-07-16 02:18 PDT
,
alan
no flags
Details
Formatted Diff
Diff
Patch
(69.93 KB, patch)
2013-07-16 06:15 PDT
,
alan
no flags
Details
Formatted Diff
Diff
Patch for landing
(69.93 KB, patch)
2013-07-18 01:26 PDT
,
alan
no flags
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
alan
Comment 1
2013-07-16 02:18:29 PDT
Created
attachment 206745
[details]
Patch
Frédéric Wang (:fredw)
Comment 2
2013-07-16 02:22:01 PDT
@Zalan I've cc'ed to two related bugs on MathML metrics. I think this one can be fixed independently but I just want to make you aware of Martin Robinson's refactoring of the MathML code that removes the "preferred heights" computation.
alan
Comment 3
2013-07-16 02:23:07 PDT
(In reply to
comment #2
)
> @Zalan I've cc'ed to two related bugs on MathML metrics. I think this one can be fixed independently but I just want to make you aware of Martin Robinson's refactoring of the MathML code that removes the "preferred heights" computation.
good to know, thanks!
Frédéric Wang (:fredw)
Comment 4
2013-07-16 02:34:08 PDT
In the test: <div> and </span> do not match. I'm not sure why you need to use a margin style. What about using <span style="display: inline-block; width: ...; height: ...; background: ...;"> as in the other mspace reftests? Also do you really need a platform-specific reference file for a reftest (see
bug 118599
)?
alan
Comment 5
2013-07-16 02:38:22 PDT
(In reply to
comment #4
)
> In the test: <div> and </span> do not match. I'm not sure why you need to use a margin style. What about using <span style="display: inline-block; width: ...; height: ...; background: ...;"> as in the other mspace reftests? Also do you really need a platform-specific reference file for a reftest (see
bug 118599
)?
I'll look into those. I also thought i didnt need the platform specific ref file for the reftest, but since the test framework was complaining, I added. I'll check again and will remove it. Thanks.
alan
Comment 6
2013-07-16 06:15:40 PDT
Created
attachment 206772
[details]
Patch
Stephanie Lewis
Comment 7
2013-07-17 17:29:55 PDT
Skipped Crashing tests in
http://trac.webkit.org/changeset/152822
while waiting for a fix
chris fleizach
Comment 8
2013-07-17 18:11:06 PDT
Comment on
attachment 206772
[details]
Patch OK
Frédéric Wang (:fredw)
Comment 9
2013-07-17 22:14:30 PDT
Just a note: if
bug 118812
is taken before that one, then you won't need to add the platform-specific reference for fractions. Of course that reference can also just be removed later.
alan
Comment 10
2013-07-18 01:23:30 PDT
(In reply to
comment #9
)
> Just a note: if
bug 118812
is taken before that one, then you won't need to add the platform-specific reference for fractions. Of course that reference can also just be removed later.
I'll just commit this and
bug 118812
will take care of the cleanup of the platform specific files.
alan
Comment 11
2013-07-18 01:26:29 PDT
Created
attachment 206963
[details]
Patch for landing
Frédéric Wang (:fredw)
Comment 12
2013-07-18 01:27:09 PDT
(In reply to
comment #10
)
> I'll just commit this and
bug 118812
will take care of the cleanup of the platform specific files.
ok, sounds good to me.
WebKit Commit Bot
Comment 13
2013-07-18 02:07:44 PDT
Comment on
attachment 206963
[details]
Patch for landing Clearing flags on attachment: 206963 Committed
r152840
: <
http://trac.webkit.org/changeset/152840
>
WebKit Commit Bot
Comment 14
2013-07-18 02:07:48 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug