Incorrect calculated width for mspace. https://bugs.webkit.org/show_bug.cgi?id=118601

Patch by Zalan Bujtas <zalan@apple.com> on 2013-07-18
Reviewed by Chris Fleizach.

Source/WebCore:

Use intrinsic logical widths to size <mspace> properly.
This patch also fixes an assert on isPreferredLogicalHeightDirty() which occurs
while layouting <mspace>. The assert fix is required, so that the sizing can be
fixed.

Test: mathml/presentation/mspace-prefered-width.html

* rendering/mathml/RenderMathMLBlock.cpp:
(WebCore::parseMathMLLength): switch to LayoutUnits.
(WebCore::parseMathMLNamedSpace): switch to LayoutUnits.
* rendering/mathml/RenderMathMLBlock.h:
* rendering/mathml/RenderMathMLFraction.cpp:
(WebCore::RenderMathMLFraction::updateFromElement):
* rendering/mathml/RenderMathMLFraction.h:
* rendering/mathml/RenderMathMLSpace.cpp:
(WebCore::RenderMathMLSpace::computeIntrinsicLogicalWidths):
* rendering/mathml/RenderMathMLSpace.h:

LayoutTests:

Use intrinsic logical widths to size <mspace> properly.
This patch also fixes an assert on isPreferredLogicalHeightDirty(), which occurs
while layouting <mspace>. The assert fix is required, so that the sizing can be
fixed.

* mathml/presentation/mspace-prefered-width-expected.html: Added.
* mathml/presentation/mspace-prefered-width.html: Added.
* platform/mac/mathml/presentation/fractions-expected.png: Rebaseline: float->LayoutUnit.
* platform/mac/mathml/presentation/fractions-expected.txt: Rebaseline: float->LayoutUnit.

Canonical link: https://commits.webkit.org/136708@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@152840 268f45cc-cd09-0410-ab3c-d52691b4dbfc