Source/WebCore/rendering/mathml/RenderMathMLBlock.h
@@ -129,8 +129,8 @@ private:
 };
 
 // Parsing functions for MathML Length values
-bool parseMathMLLength(const String&, float&, const RenderStyle*, bool allowNegative = true);
-bool parseMathMLNamedSpace(const String&, float&, const RenderStyle*, bool allowNegative = true);
+bool parseMathMLLength(const String&, LayoutUnit&, const RenderStyle*, bool allowNegative = true);
+bool parseMathMLNamedSpace(const String&, LayoutUnit&, const RenderStyle*, bool allowNegative = true);
 }
 
 #endif // ENABLE(MATHML)
